hphp/test/slow/coeffects/reified-4.php.expectf
Fatal error: Type constant A::T does not have a 'classname' field in %s on line 11
